platform section added

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,15 @@ body.modal-open {
 }
 
 
+
+.navbar-unsticky {
+  position: static !important;
+}
+
+
+
+
+
 .cursive {
   font-family: "Cedarville Cursive", cursive;
 }
